--- a/src/app/pages/pre-intermediate/listening-pre-intermediate/listening-pre-intermediate.page.html
+++ b/src/app/pages/pre-intermediate/listening-pre-intermediate/listening-pre-intermediate.page.html
@@ -1,7 +1,7 @@
 <ion-header translucent>
     <ion-toolbar>
         <ion-buttons slot="start">
-            <ion-back-button defaultHref="beginner"></ion-back-button>
+            <ion-back-button defaultHref="pre-intermediate"></ion-back-button>
         </ion-buttons>
         <ion-title>Speaking and Listening</ion-title>
     </ion-toolbar>
