--- a/src/app/pages/pre-intermediate/pre-intermediate.page.html
+++ b/src/app/pages/pre-intermediate/pre-intermediate.page.html
@@ -51,7 +51,7 @@
             </ion-button>
             <ion-button href="listening-pre-intermediate" color="light">
                 <div class="icon">
-                    <ion-icon name="volume-high" size="large"></ion-icon> <br> Listening II
+                    <ion-icon name="volume-high" size="large"></ion-icon> <br> Speaking II
                 </div>
             </ion-button>
             <ion-button href="tests2-list" color="light">
