--- a/src/app/pages/pre-intermediate/tests2-list/test-listening3/test-listening3.page.html
+++ b/src/app/pages/pre-intermediate/tests2-list/test-listening3/test-listening3.page.html
@@ -18,7 +18,7 @@
                     <button ion-button (click)="listenToSpeech(text)">Listen</button>
                 </div>
                 <br>
-                <br>
+
 
                 <div>
                     <ion-button expand="full" color="primary" (click)="acerto()" (click)="presentAlert()">Going to a pharmacy</ion-button>
@@ -39,15 +39,16 @@
                     <h5>Click the button to listen and choose the option you heard</h5>
                     <button ion-button (click)="listen1ToSpeech(text)">Listen</button>
                 </div>
+                <br>
                 <div>
 
-                    <ion-button expand="full" color="primary" (click)="acerto()" (click)="presentAlert()">You need to do some housework before you go.</ion-button> <br>
+                    <ion-button expand="full" color="primary" (click)="acerto()" (click)="presentAlert()">You need to do some <br> housework before you go.</ion-button>
 
-                    <ion-button expand="full" color="primary" (click)="wrongAlert()">You must do some housework before you go</ion-button> <br>
+                    <ion-button expand="full" color="primary" (click)="wrongAlert()">You must do some <br> housework before you go</ion-button>
 
-                    <ion-button expand="full" color="primary" (click)="wrongAlert()">You may do some housework before you go</ion-button> <br>
+                    <ion-button expand="full" color="primary" (click)="wrongAlert()">You may do some <br> housework before you go</ion-button>
 
-                    <ion-button expand="full" color="primary" (click)="wrongAlert()">You might do some housework before you go</ion-button>
+                    <ion-button expand="full" color="primary" (click)="wrongAlert()">You might do some <br> housework before you go</ion-button>
                 </div>
             </div>
         </ion-slide>
@@ -59,14 +60,15 @@
                     <h5>Click the button to listen and choose the option you heard</h5>
                     <button ion-button (click)="listen2ToSpeech(text)">Listen</button>
                 </div>
+                <br>
                 <div>
-                    <ion-button expand="full" color="primary" (click)="acerto()" (click)="presentAlert()">Can music really make you run faster?</ion-button>
+                    <ion-button expand="full" color="primary" (click)="acerto()" (click)="presentAlert()">Can music really make <br> you run faster?</ion-button>
 
-                    <ion-button expand="full" color="primary" (click)="wrongAlert()">Can music really make you sleep faster?</ion-button>
+                    <ion-button expand="full" color="primary" (click)="wrongAlert()">Can music really make <br> you sleep faster?</ion-button>
 
-                    <ion-button expand="full" color="primary" (click)="wrongAlert()">Can music really make you walk faster?</ion-button>
+                    <ion-button expand="full" color="primary" (click)="wrongAlert()">Can music really make <br> you walk faster?</ion-button>
 
-                    <ion-button expand="full" color="primary" (click)="wrongAlert()">Can music really make you play faster?</ion-button>
+                    <ion-button expand="full" color="primary" (click)="wrongAlert()">Can music really make <br> you play faster?</ion-button>
                 </div>
             </div>
         </ion-slide>
@@ -78,14 +80,15 @@
                     <h5>Click the button to listen and choose the option you heard</h5>
                     <button ion-button (click)="listen3ToSpeech(text)">Listen</button>
                 </div>
+                <br>
                 <div>
-                    <ion-button expand="full" color="primary" (click)="wrongAlert()">You haven't spent time enough on your homework</ion-button>
+                    <ion-button expand="full" color="primary" (click)="wrongAlert()">You haven't spent time <br> enough on your homework</ion-button>
 
-                    <ion-button expand="full" color="primary" (click)="acerto()" (click)="presentAlert()">You haven't spent enough time on your homework</ion-button>
+                    <ion-button expand="full" color="primary" (click)="acerto()" (click)="presentAlert()">You haven't spent enough time <br> on your homework</ion-button>
 
-                    <ion-button expand="full" color="primary" (click)="wrongAlert()">You haven't spent many time on your homework</ion-button>
+                    <ion-button expand="full" color="primary" (click)="wrongAlert()">You haven't spent many time <br> on your homework</ion-button>
 
-                    <ion-button expand="full" color="primary" (click)="wrongAlert()">You haven't spent much time on your homework</ion-button>
+                    <ion-button expand="full" color="primary" (click)="wrongAlert()">You haven't spent much time <br> on your homework</ion-button>
                 </div>
             </div>
         </ion-slide>
@@ -97,15 +100,15 @@
                     <h5>Click the button to listen and choose the option you heard</h5>
                     <button ion-button (click)="listen4ToSpeech(text)">Listen</button>
                 </div>
-
+                <br>
                 <div>
-                    <ion-button expand="full" color="primary" (click)="showResult()">It's cold in here. I'm closing the window.</ion-button>
+                    <ion-button expand="full" color="primary" (click)="showResult()">It's cold in here. <br> I'm closing the window.</ion-button>
 
-                    <ion-button expand="full" color="primary" (click)="showResult()">It's cold in here. I close the window.</ion-button>
+                    <ion-button expand="full" color="primary" (click)="showResult()">It's cold in here. <br> I close the window.</ion-button>
 
-                    <ion-button expand="full" color="primary" (click)="showResult()">It's cold in here. I closed the window.</ion-button>
+                    <ion-button expand="full" color="primary" (click)="showResult()">It's cold in here. <br> I closed the window.</ion-button>
 
-                    <ion-button expand="full" color="primary" (click)="acerto()" (click)="showResult()">It's cold in here. I'll close the window.</ion-button>
+                    <ion-button expand="full" color="primary" (click)="acerto()" (click)="showResult()">It's cold in here. <br> I'll close the window.</ion-button>
                 </div>
             </div>
         </ion-slide>
