--- a/src/app/pages/pre-intermediate/tests2-list/tests2-list.page.html
+++ b/src/app/pages/pre-intermediate/tests2-list/tests2-list.page.html
@@ -12,40 +12,38 @@
 
         <ion-card routerLink="/teste3">
             <ion-card-header>
-                <ion-card-title>Practise test 1
-
-                </ion-card-title>
+                <ion-card-title>Practise test 3</ion-card-title>
             </ion-card-header>
 
         </ion-card>
-        <ion-card routerLink="/teste2">
+        <ion-card routerLink="/teste4">
             <ion-card-header>
-                <ion-card-title>Practise test 2</ion-card-title>
+                <ion-card-title>Practise test 4</ion-card-title>
             </ion-card-header>
 
         </ion-card>
-        <ion-card routerLink="/test-listening">
+        <ion-card routerLink="/test-listening3">
             <ion-card-header>
-                <ion-card-title>Listening test 1</ion-card-title>
+                <ion-card-title>Listening test 3</ion-card-title>
             </ion-card-header>
 
         </ion-card>
-        <ion-card href="text5">
+        <ion-card routerLink="/test-listening4">
             <ion-card-header>
-                <ion-card-title>Listening test 2</ion-card-title>
+                <ion-card-title>Listening test 4</ion-card-title>
             </ion-card-header>
 
         </ion-card>
 
-        <ion-card href="testvoc">
+        <ion-card href="testvoc2">
             <ion-card-header>
-                <ion-card-title>Vocabulary test 1</ion-card-title>
+                <ion-card-title>Vocabulary test 3</ion-card-title>
             </ion-card-header>
 
         </ion-card>
-        <ion-card href="testvoc1">
+        <ion-card href="testvoc3">
             <ion-card-header>
-                <ion-card-title>Vocabulary test 2</ion-card-title>
+                <ion-card-title>Vocabulary test 4</ion-card-title>
             </ion-card-header>
 
         </ion-card>
