--- a/src/app/pages/upper-intermediate/upper-intermediate.page.html
+++ b/src/app/pages/upper-intermediate/upper-intermediate.page.html
@@ -43,7 +43,7 @@
                     <ion-icon name="albums" size="large"></ion-icon> <br> Grammar IV
                 </div>
             </ion-button>
-            <ion-button href="vocabulary-list" color="light">
+            <ion-button href="vocabulary-upper" color="light">
                 <div class="icon">
                     <ion-icon name="logo-vimeo" size="large"></ion-icon> <br> Vocabulary IV
                 </div>
@@ -55,7 +55,7 @@
             </ion-button>
             <ion-button href="listening-upper-intermediate" color="light">
                 <div class="icon">
-                    <ion-icon name="volume-high" size="large"></ion-icon> <br> Listening IV
+                    <ion-icon name="volume-high" size="large"></ion-icon> <br> Speaking IV
                 </div>
             </ion-button>
             <ion-button href="testess" color="light">
