finalizando vocabulario upper

--- a/src/app/pages/upper-intermediate/vocabulary-upper/body2/body2.page.html
+++ b/src/app/pages/upper-intermediate/vocabulary-upper/body2/body2.page.html
@@ -3,7 +3,7 @@
         <ion-buttons slot="start">
             <ion-back-button defaultHref="vocabulary-upper"></ion-back-button>
         </ion-buttons>
-        <ion-title>Clothes</ion-title>
+        <ion-title>The body</ion-title>
     </ion-toolbar>
 </ion-header>
 
@@ -14,121 +14,134 @@
 
             <ion-slide>
                 <div class="img">
-                    <img src="/assets/img/clothes/checked.jpg" alt="">
+                    <img src="/assets/img/body1/ankle.jpg" alt="">
                 </div>
                 <div class="titulo">
-                    <h4>Ckecked</h4> <br>
+                    <h4>Ankle</h4> <br>
                 </div>
                 <div>
-                    <ion-button (click)="checkedToSpeech(text)">Listen</ion-button>
+                    <ion-button (click)="ankleToSpeech(text)">Listen</ion-button>
                 </div>
             </ion-slide>
 
             <ion-slide>
                 <div class="img">
-                    <img src="/assets/img/clothes/hooded.jfif" alt="">
+                    <img src="/assets/img/body1/calf.jpg" alt="">
                 </div>
                 <div class="titulo">
-                    <h4>Hooded</h4> <br>
+                    <h4>Calf</h4> <br>
                 </div>
                 <div>
-                    <ion-button (click)="hoodedToSpeech(text)">Listen</ion-button>
+                    <ion-button (click)="calfToSpeech(text)">Listen</ion-button>
                 </div>
             </ion-slide>
 
             <ion-slide>
                 <div class="img">
-                    <img src="/assets/img/clothes/long.jpg" alt="">
+                    <img src="/assets/img/body1/chest.jfif" alt="">
                 </div>
                 <div class="titulo">
-                    <h4>Long sleeve</h4> <br>
+                    <h4>Chest</h4> <br>
                 </div>
                 <div>
-                    <ion-button (click)="longToSpeech(text)">Listen</ion-button>
+                    <ion-button (click)="chestToSpeech(text)">Listen</ion-button>
                 </div>
             </ion-slide>
 
             <ion-slide>
                 <div class="img">
-                    <img src="/assets/img/clothes/loose.jpg" alt="">
+                    <img src="/assets/img/body1/elbow.jfif" alt="">
                 </div>
                 <div class="titulo">
-                    <h4>Loose</h4> <br>
+                    <h4>Elbow</h4> <br>
                 </div>
                 <div>
-                    <ion-button (click)="looseToSpeech(text)">Listen</ion-button>
+                    <ion-button (click)="elbowToSpeech(text)">Listen</ion-button>
                 </div>
             </ion-slide>
 
             <ion-slide>
                 <div class="img">
-                    <img src="/assets/img/clothes/patterned.jpg" alt="">
+                    <img src="/assets/img/body1/fist.png" alt="">
                 </div>
                 <div class="titulo">
-                    <h4>Patterned</h4> <br>
+                    <h4>Fist</h4> <br>
                 </div>
                 <div>
-                    <ion-button (click)="patternedToSpeech(text)">Listen</ion-button>
+                    <ion-button (click)="fistToSpeech(text)">Listen</ion-button>
                 </div>
             </ion-slide>
 
             <ion-slide>
                 <div class="img">
-                    <img src="/assets/img/clothes/plain.png" alt="">
+                    <img src="/assets/img/body1/heel.jpg" alt="">
                 </div>
                 <div class="titulo">
-                    <h4>Plain</h4> <br>
+                    <h4>Heel</h4> <br>
                 </div>
                 <div>
-                    <ion-button (click)="plainToSpeech(text)">Listen</ion-button>
+                    <ion-button (click)="heelToSpeech(text)">Listen</ion-button>
                 </div>
             </ion-slide>
 
             <ion-slide>
                 <div class="img">
-                    <img src="/assets/img/clothes/sleeveless.jpg" alt="">
+                    <img src="/assets/img/body1/nails.jfif" alt="">
                 </div>
                 <div class="titulo">
-                    <h4>Sleeveless</h4> <br>
+                    <h4>Nails</h4> <br>
                 </div>
                 <div>
-                    <ion-button (click)="sleeveToSpeech(text)">Listen</ion-button>
+                    <ion-button (click)="nailsToSpeech(text)">Listen</ion-button>
                 </div>
             </ion-slide>
 
             <ion-slide>
                 <div class="img">
-                    <img src="/assets/img/clothes/striped.jpg" alt="">
+                    <img src="/assets/img/body1/palm.jpg" alt="">
                 </div>
                 <div class="titulo">
-                    <h4>Striped</h4> <br>
+                    <h4>Palm</h4> <br>
                 </div>
                 <div>
-                    <ion-button (click)="stripedToSpeech(text)">Listen</ion-button>
+                    <ion-button (click)="palmToSpeech(text)">Listen</ion-button>
                 </div>
             </ion-slide>
 
             <ion-slide>
                 <div class="img">
-                    <img src="/assets/img/clothes/tight.jpg" alt="">
+                    <img src="/assets/img/body1/thigh.jpg" alt="">
                 </div>
                 <div class="titulo">
-                    <h4>Tight</h4> <br>
+                    <h4>Thigh</h4> <br>
                 </div>
                 <div>
-                    <ion-button (click)="tightToSpeech(text)">Listen</ion-button>
+                    <ion-button (click)="thighToSpeech(text)">Listen</ion-button>
+                </div>
+            </ion-slide>
+
+
+            <ion-slide>
+                <div class="img">
+                    <img src="/assets/img/body1/waist.png" alt="">
+                </div>
+                <div class="titulo">
+                    <h4>Waist</h4> <br>
+                </div>
+                <div>
+                    <ion-button (click)="waistToSpeech(text)">Listen</ion-button>
                 </div>
             </ion-slide>
 
             <ion-slide>
                 <div class="img">
-                    <img src="/assets/img/clothes/v-neck.jpg" alt="">
+                    <img src="/assets/img/body1/wrist.jpg" alt="">
                 </div>
                 <div class="titulo">
-                    <h4>V-neck</h4> <br>
+                    <h4>Wrist</h4> <br>
                 </div>
                 <div>
-                    <ion-button (click)="neckToSpeech(text)">Listen</ion-button>
+                    <ion-button (click)="wristToSpeech(text)">Listen</ion-button>
                 </div>
             </ion-slide>
         </ion-slides>
