--- a/src/app/pages/upper-intermediate/vocabulary-upper/vocabulary-upper.page.html
+++ b/src/app/pages/upper-intermediate/vocabulary-upper/vocabulary-upper.page.html
@@ -9,7 +9,7 @@
     </ion-header>
     <ion-content>
         <a href="clothes2">
-            <ion-grid href="clothes1">
+            <ion-grid href="clothes2">
                 <ion-row>
                     <ion-col size="4" class="img">
                         <img src="/assets/img/thingswear.jfif">
@@ -25,8 +25,8 @@
             </ion-grid>
         </a>
 
-        <a href="the-body1">
-            <ion-grid>
+        <a href="body2">
+            <ion-grid href="body2">
                 <ion-row>
                     <ion-col size="4" class="img">
                         <img src="/assets/img/partsBody.png">
@@ -41,15 +41,15 @@
                 </ion-row>
             </ion-grid>
         </a>
-        <a href="relationship">
-            <ion-grid>
+        <a href="feelings">
+            <ion-grid href="feelings">
                 <ion-row>
                     <ion-col size="4" class="img">
-                        <img src="/assets/img/relationship.jfif">
+                        <img src="/assets/img/feeling.jpg">
                     </ion-col>
                     <ion-col size="7" class="text">
                         <h4>Feelings</h4>
-                        <p>Total 8 words</p>
+                        <p>Total 10 words</p>
                     </ion-col>
                     <ion-col size="1" class="seta">
                         <ion-icon name="arrow-round-forward" size="large"></ion-icon>
@@ -57,15 +57,15 @@
                 </ion-row>
             </ion-grid>
         </a>
-        <a href="cinema">
-            <ion-grid>
+        <a href="extreme-weather">
+            <ion-grid href="extreme-weather">
                 <ion-row>
                     <ion-col size="4" class="img">
-                        <img src="/assets/img/cinema.jfif">
+                        <img src="/assets/img/theWeather.jpg">
                     </ion-col>
                     <ion-col size="7" class="text">
                         <h4>The weather</h4>
-                        <p>Total 12 words</p>
+                        <p>Total 9 words</p>
                     </ion-col>
                     <ion-col size="1" class="seta">
                         <ion-icon name="arrow-round-forward" size="large"></ion-icon>
@@ -73,47 +73,15 @@
                 </ion-row>
             </ion-grid>
         </a>
-        <a href="transport">
-            <ion-grid>
+        <a href="illnesses">
+            <ion-grid href="illnesses">
                 <ion-row>
                     <ion-col size="4" class="img">
-                        <img src="/assets/img/transportt.jfif">
-                    </ion-col>
-                    <ion-col size="7" class="text">
-                        <h4>The media</h4>
-                        <p>Total 21 words</p>
-                    </ion-col>
-                    <ion-col size="1" class="seta">
-                        <ion-icon name="arrow-round-forward" size="large"></ion-icon>
-                    </ion-col>
-                </ion-row>
-            </ion-grid>
-        </a>
-        <a href="personality1">
-            <ion-grid>
-                <ion-row>
-                    <ion-col size="4" class="img">
-                        <img src="/assets/img/describing.jfif">
-                    </ion-col>
-                    <ion-col size="7" class="text">
-                        <h4>Air travel</h4>
-                        <p>Total 25 words</p>
-                    </ion-col>
-                    <ion-col size="1" class="seta">
-                        <ion-icon name="arrow-round-forward" size="large"></ion-icon>
-                    </ion-col>
-                </ion-row>
-            </ion-grid>
-        </a>
-        <a href="personality1">
-            <ion-grid>
-                <ion-row>
-                    <ion-col size="4" class="img">
-                        <img src="/assets/img/describing.jfif">
+                        <img src="/assets/img/illnesses.jpg">
                     </ion-col>
                     <ion-col size="7" class="text">
                         <h4>Illness</h4>
-                        <p>Total 25 words</p>
+                        <p>Total 9 words</p>
                     </ion-col>
                     <ion-col size="1" class="seta">
                         <ion-icon name="arrow-round-forward" size="large"></ion-icon>
