finalizando grammar intermediate

--- a/src/app/pages/upper-intermediate/grammar-upper/grammar-upper.page.html
+++ b/src/app/pages/upper-intermediate/grammar-upper/grammar-upper.page.html
@@ -22,28 +22,28 @@
                 <ion-card-title>Adjective order</ion-card-title>
             </ion-card-header>
             <ion-card-content>
-                You can put more than one adjective before a noun... </ion-card-content>
+                You can put more than one adjective before a n... </ion-card-content>
         </ion-card>
         <ion-card href="narrative-tenses">
             <ion-card-header>
                 <ion-card-title>Narrative tenses</ion-card-title>
             </ion-card-header>
             <ion-card-content>
-                We use the past simple to talk about consecutive ac... </ion-card-content>
+                We use the past simple to talk about consecuti... </ion-card-content>
         </ion-card>
         <ion-card href="future-perfect">
             <ion-card-header>
                 <ion-card-title>Future perfect and continuous</ion-card-title>
             </ion-card-header>
             <ion-card-content>
-                We use the future perfect to say something will be... </ion-card-content>
+                We use the future perfect to say something wi... </ion-card-content>
         </ion-card>
         <ion-card href="structures-wish">
             <ion-card-header>
                 <ion-card-title>Structures after wish</ion-card-title>
             </ion-card-header>
             <ion-card-content>
-                We use wish + person / thing + would to talk about... </ion-card-content>
+                We use wish + person / thing + would to talk... </ion-card-content>
         </ion-card>
         <ion-card href="be-usedto">
             <ion-card-header>
@@ -57,7 +57,7 @@
                 <ion-card-title>Verbs of sense</ion-card-title>
             </ion-card-header>
             <ion-card-content>
-                The adjectives are always located directly in fr... </ion-card-content>
+                You can use like or as though instead of as if,... </ion-card-content>
         </ion-card>
     </ion-content>
 </ion-app>
