--- a/src/app/pages/upper-intermediate/grammar-upper/senses/senses.page.html
+++ b/src/app/pages/upper-intermediate/grammar-upper/senses/senses.page.html
@@ -16,35 +16,22 @@
                 </ion-card-header>
 
 
-                <h5>used to / didn't use to + infinitive</h5>
+                <h5>look / feel / smell / sound / taste</h5>
                 <div class="card">
                     <div class="card-body">
-                        1. I <strong>used to sleep</strong> for eight hours every night, but now I only sleep for six. <br> I didn't recognize him. He <strong>didn't use to have</strong> a beard. <br> 2. When I lived in France as a child we <strong>used to have</strong>                        croissants for breakfast. We <strong>would buy</strong> them every morning from the local baker.
+                        1. You <strong>look tired</strong>. <br> That cake <strong>smells good</strong>! <br> These jeans don't <strong>feel comfortable</strong>. <br> 2. Tim <strong>looks like his father</strong>. This material <strong>feels like silk</strong>                        - is it? <br> Are you sure this is coffee? It <strong>tastes like tea</strong>. <br> 3. She <strong>looks as if she's been crying</strong>. It <strong>smells as if something's burning. </strong> It <strong>sounds as if it's raining.</strong>
 
                     </div>
                 </div>
 
+
                 <ol>
-                    <li>We use used to / didn't use to + infinitive to talk about past habits or repeated actions or situations / states which have changed.</li>
+                    <li>Use look feel, etc. + adjective.</li>
+                    <li>Use look, feel, etc. + noun.</li>
+                    <li>Use look, feel, etc. + as if + clause.</li>
                     <ul>
-                        <li>used to doesn't exist in the present tense. For present habits, use usually + the present simple</li>
+                        <li>You can use like or as though instead of as if, e.g. <br> It sounds like / as though it's raining.</li>
                     </ul>
-                    <li>We can also use would to refer to repeated actions in the past. However, we don't use would for non-action verbs.</li>
-                </ol>
-
-                <br>
-
-                <h5>be used to / get used to + gerund</h5>
-                <div class="card">
-                    <div class="card-body">
-                        1. I'm <strong>not used to sleeping</strong> with a duvet. I've always slept with blankets. <br> Carlos has lived in London for years. He's <strong>used to driving</strong> on the left. <br> 2. <strong>A:</strong> I can't <strong>get used to working</strong>                        at night. I feel tired all time. <br>
-                        <strong>B:</strong> Don't worry, you'll soon <strong>get used to it</strong>.
-                    </div>
-                </div>
-
-                <ol>
-                    <li>Use be used to + gerund to talk about a new situation which is <strong>now</strong> familiar or less strange.</li>
-                    <li>Use get used to + gerund to talk about a new situation which is <strong>becoming</strong> familair or less strange</li>
                 </ol>
 
 
